dotnet_macros/tests/ui/dotnet_class_bad_constructor_visibility.rs
use dotnet_macros::dotnet_class;

#[dotnet_class(constructor_visibility = "protected")]
struct FactoryOwned {
    id: usize,
}

fn main() {}
